Fix the "jump" that happens on the home page when .hello-player appears on the homepage due to no fixed height for this class

--- a/src/Component/SetUsername.module.css
+++ b/src/Component/SetUsername.module.css
@@ -2,9 +2,20 @@
   margin: var(--default-margin) 0;
 }
 
+.hidden,
 .hello-player {
+  margin-top: var(--default-margin);
+  height: 2.5vh;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+.hello-player {
+  visibility: visible;
+
   color: var(--primary-color-darker);
-  font-size: 0.75em;
 }
 
 button {
